# HCI_Analyzer

./: .gitignore  README.md  analyzer.py  command_console.py  main.py  pyproject.toml  requirements.txt  run_analyzer.bat  run_command_console.bat  run_vendor_discovery.bat  vendor_discovery.py
docs/: ble_le_rf_phy_test_hci_commands.md  ble_le_rf_phy_test_hci_commands_updated.md  hci_analyzer_detailed_design.md  hci_command_console_detailed_design.md  hci_sequence_diagram_design.md  vendor_command_discovery_design.md
src/hci_analyzer/: __init__.py  __main__.py  analyzer_main.py  analyzer_settings.py  application.py  command_console_main.py  config.py  console_application.py  console_settings.py  models.py  vendor_discovery_main.py
src/hci_analyzer/command_builder/: __init__.py  definitions.py  encoder.py  validation.py
src/hci_analyzer/gui/: __init__.py  command_console.py  main_window.py  (+2 more)
tests/: __init__.py  test_analyzer_sequence_integration.py  test_analyzer_settings.py  test_command_console_gui.py  test_console_application_support.py  test_console_settings.py  test_jsonl_logger.py  test_serial_monitor.py  test_serial_transport.py  test_window_size_persistence.py
tests/command_builder/: __init__.py  test_definitions.py  test_encoder.py  test_validation.py
tests/parser/: test_command_parser.py  test_event_parser.py  test_h4_stream.py  test_race_parser.py  test_supported_commands.py
tests/presentation/: __init__.py  test_summary.py  test_text.py  test_transport_log.py
tests/sequence/: __init__.py  test_diagram.py
tests/serial/: __init__.py
(+21 files in other folders)
